--- a/config/locales/message.pt-BR.yml
+++ b/config/locales/message.pt-BR.yml
@@ -4,7 +4,7 @@ pt-BR:
  confirm_delete: "Deseja realmente excluir?"
  confirm: "Deseja realmente excluir?"
  disabled_button: "Carregando..."
- disable_with: "Carregando..."
+ disable_with: "Processando, isso poderá demorar alguns minutos"
  button_back: "Voltar"
  filter_button: "Filtrar Pesquisa"
  warning_pundit: "Você não tem permissão de acesso neste sistema."
